<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color"
    tools:context=".ui.registrationFragment.RegistrationFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/ProfileText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/registration"
                android:textSize="35sp" />

            <TextView
                style="@style/RegistrationText"
                android:layout_width="match_parent"
                android:gravity="bottom"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/registration_phone"
                style="@style/RegistrationEditText"
                android:layout_width="match_parent"
                android:text="+79219999999" />

            <TextView
                style="@style/RegistrationText"
                android:layout_width="match_parent"
                android:gravity="bottom"
                android:text="@string/name" />

            <EditText
                android:id="@+id/registration_name"
                style="@style/RegistrationEditText"
                android:layout_width="match_parent"
                android:hint="Name" />

            <TextView
                style="@style/RegistrationText"
                android:layout_width="match_parent"
                android:gravity="bottom"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/registration_user_name"
                style="@style/RegistrationEditText"
                android:layout_width="match_parent"
                android:hint="Username" />

            <Button
                android:id="@+id/btn_registration"
                style="@style/RegistrationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_btn"
                android:layout_gravity="bottom"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>